//
// Copyright 2023 The Chainloop Authors.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package controlplane.v1;

option go_package = "github.com/chainloop-dev/chainloop/app/controlplane/api/controlplane/v1;v1";
import "google/api/annotations.proto";

service StatusService {
	rpc Infoz (InfozRequest) returns (InfozResponse) {
		option (google.api.http) = {
            get: "/infoz"
        };
	}
	rpc Statusz (StatuszRequest) returns (StatuszResponse) {
		option (google.api.http) = {
            get: "/statusz"
        };
	}
}

message InfozRequest { }

message StatuszRequest {
	// Parameter that can be used by readiness probes
	// The main difference is that readiness probes will take into account that all
	// dependent services are up and ready
	bool readiness = 1;
}

message InfozResponse {
	string login_url = 1 [json_name="loginURL"];;
	string version = 2;
}

message StatuszResponse {}